// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorDetailsPanel rendering renders expected elements when disableEdit and disableDelete are set 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <div
    className="EditorDetailsPanel__body"
  />
  <div
    className="EditorDetailsPanel__buttons"
  >
    <Button
      disabled={true}
      id="deleteBtn"
      onClick={[Function]}
      size="medium"
      text="Delete"
      tooltipText="Disable Delete"
      type="tertiary"
    />
    <Button
      disabled={true}
      id="editBtn"
      onClick={[Function]}
      size="medium"
      text="Edit"
      tooltipText="Disable Edit"
      type="primary"
    />
  </div>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements when onDelete is not set 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <div
    className="EditorDetailsPanel__body"
  />
  <div
    className="EditorDetailsPanel__buttons"
  >
    <Button
      disabled={false}
      id="editBtn"
      onClick={[Function]}
      size="medium"
      text="Edit"
      type="primary"
    />
  </div>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements when showButtons is false 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <div
    className="EditorDetailsPanel__body"
  />
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements when showButtons is true 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <div
    className="EditorDetailsPanel__body"
  />
  <div
    className="EditorDetailsPanel__buttons"
  >
    <Button
      disabled={false}
      id="deleteBtn"
      onClick={[Function]}
      size="medium"
      text="Delete"
      type="tertiary"
    />
    <Button
      disabled={false}
      id="editBtn"
      onClick={[Function]}
      size="medium"
      text="Edit"
      type="primary"
    />
  </div>
</aside>
`;

exports[`EditorDetailsPanel rendering renders expected elements when the body has a className 1`] = `
<aside
  className="EditorDetailsPanel"
  id="test"
>
  <IconButton
    aria-label="Close"
    className="EditorDetailsPanel__close"
    icon={
      Object {
        "icon": Array [],
      }
    }
    id="closeDetailsPanelBtn"
    size="large"
    tooltipPlacement="left"
    tooltipText="Close"
    type="ghost"
  />
  <div
    aria-level="2"
    className="EditorDetailsPanel__title"
    id="detailsPanelTitle"
    role="heading"
  >
    Test
  </div>
  <div
    className="BodyClass EditorDetailsPanel__body"
  />
  <div
    className="EditorDetailsPanel__buttons"
  >
    <Button
      disabled={false}
      id="deleteBtn"
      onClick={[Function]}
      size="medium"
      text="Delete"
      type="tertiary"
    />
    <Button
      disabled={false}
      id="editBtn"
      onClick={[Function]}
      size="medium"
      text="Edit"
      type="primary"
    />
  </div>
</aside>
`;
